# imagevue

./: CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: ci.yml  release.yml
docs/superpowers/plans/: 2026-07-02-imagevue-v1.md
docs/superpowers/specs/: 2026-07-02-imagevue-design.md
src/: App.vue  main.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: auth_error.rs  error.rs  lib.rs  logging.rs  main.rs  pull_error.rs  registry_error.rs  storage_error.rs
src-tauri/src/commands/: auth.rs  catalog.rs  connection.rs  manifest.rs  mod.rs  pull.rs  tag.rs
src-tauri/src/oci/: auth.rs  client.rs  http.rs  mod.rs  parser.rs  types.rs
src-tauri/src/services/: auth_service.rs  manifest_service.rs  mod.rs  pull_service.rs  registry_service.rs
src-tauri/src/storage/: keyring.rs  mod.rs  repo.rs  sqlite.rs
src-tauri/src/tarball/: builder.rs  mod.rs  repack.rs
src-tauri/tests/: pull_integration.rs
src/components/: AppShell.vue  ConnectionCard.vue  PullProgressDrawer.vue  RegistryEditDialog.vue  RegistrySelector.vue  RegistryTable.vue
src/i18n/: en-US.ts  index.ts  zh-CN.ts
src/router/: index.ts
src/stores/: connections.ts  index.ts  pull.ts
src/stores/__tests__/: stores.spec.ts
src/theme/: index.ts
src/views/: AboutView.vue  ConnectionEditView.vue  ConnectionListView.vue  RegistryView.vue  RepositoryView.vue  SettingsView.vue  TagDetailView.vue  WelcomeView.vue
