[package]
name = "imagevue"
version = "0.1.0"
description = "OCI image & chart registry viewer"
authors = ["you"]
edition = "2021"

[lib]
name = "imagevue_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-deep-link = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "stream", "json"] }
rusqlite = { version = "0.31", features = ["bundled"] }
keyring = "3"
thiserror = "1"
anyhow = "1"
tar = "0.4"
flate2 = "1"
sha2 = "0.10"
hex = "0.4"
url = "2"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
async-trait = "0.1"
tokio-util = "0.7"
futures = "0.3"
bytes = "1"
base64 = "0.22"
rand = "0.8"
zstd = "0.13"
specta = { version = "=2.0.0-rc.25", features = ["derive"] }
specta-typescript = "=0.0.12"
tauri-specta = { version = "=2.0.0-rc.25", features = ["derive", "typescript"] }

[dev-dependencies]
wiremock = "0.6"
tempfile = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "time"] }
